--- a/css/styles2.css
+++ b/css/styles2.css
@@ -1526,10 +1526,6 @@ MEDIA QUERIES
     }
 
     .features-list {
-        grid-template-columns: 1fr;
-    }
-
-    .features-grid {
         grid-template-columns: repeat(2, 1fr);
     }
 }
@@ -1755,6 +1751,11 @@ MEDIA QUERIES
     .nav-brand {
         font-size: 1.1rem;
     }
+
+    .features-list {
+        grid-template-columns: 1fr;
+        gap: var(--spacing-3);
+    }
 }
 
 /* Mobile Small */
@@ -1811,6 +1812,11 @@ MEDIA QUERIES
 
     .results-grid {
         grid-template-columns: 1fr;
+    }
+
+    .features-list {
+        grid-template-columns: 1fr;
+        gap: var(--spacing-3);
     }
 }
 
